// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth0APIClient getUserCountry should call getUserCountry 1`] = `
Array [
  "cb",
]
`;

exports[`Auth0APIClient logIn with credentials should call client.login 1`] = `
Object {
  "nonce": undefined,
  "realm": undefined,
  "sso": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials should fail when in popup mode 1`] = `"Cross origin login is not supported in popup mode"`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call authorize when redirect===true 1`] = `
Object {
  "nonce": undefined,
  "sso": undefined,
  "state": undefined,
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call popup.authorize when redirect===false 1`] = `
Object {
  "nonce": undefined,
  "sso": undefined,
  "state": undefined,
}
`;

exports[`Auth0APIClient passwordlessStart should call client.passwordlessStart 1`] = `
Array [
  Object {
    "foo": "bar",
  },
  [Function],
]
`;

exports[`Auth0APIClient passwordlessVerify should call client.passwordlessLogin 1`] = `
Array [
  Object {
    "foo": "bar",
  },
  [Function],
]
`;
